@@ -1,6 +1,8 @@
 package com.checkmarx.intellij.devassist.problems;
 
 import com.checkmarx.intellij.devassist.model.ScanIssue;
+import com.checkmarx.intellij.devassist.remediation.CxOneAssistFix;
+import com.checkmarx.intellij.devassist.utils.ScanEngine;
 import com.intellij.codeInspection.ProblemDescriptor;
 import com.intellij.openapi.components.Service;
 import com.intellij.openapi.project.Project;
@@ -17,12 +19,13 @@ import java.util.concurrent.ConcurrentHashMap;
  */
 @Service(Service.Level.PROJECT)
 public final class ProblemHolderService {
-    // Scan issues for each file
-    private final Map<String, List<ScanIssue>> fileToIssues = new LinkedHashMap<>();
 
-    // Problem descriptors for each file to avoid display empty problems
+    // Scan issues and problem descriptors for each file
+    private final Map<String, List<ScanIssue>> fileToIssues = new ConcurrentHashMap<>();
     private final Map<String, List<ProblemDescriptor>> fileProblemDescriptor = new ConcurrentHashMap<>();
+
     public static final Topic<IssueListener> ISSUE_TOPIC = new Topic<>("ISSUES_UPDATED", IssueListener.class);
+
 
     public interface IssueListener {
         void onIssuesUpdated(Map<String, List<ScanIssue>> issues);
@@ -47,38 +50,12 @@ public final class ProblemHolderService {
     /**
      * Adds problems for the given file.
      *
-     * @param filePath the file path.
-     * @param problems the scan issues.
+     * @param filePath   the file path.
+     * @param scanIssues the scan issues.
      */
-    public synchronized void addScanIssues(String filePath, List<ScanIssue> problems) {
-        fileToIssues.put(filePath, new ArrayList<>(problems));
+    public void addScanIssues(String filePath, List<ScanIssue> scanIssues) {
+        fileToIssues.put(filePath, new ArrayList<>(scanIssues));
         // Notify subscribers immediately
-        syncWithCxOneFindings();
-    }
-
-    /**
-     * Removes scan issues for the given file.
-     *
-     * @param filePath virtual file path.
-     */
-    public synchronized void removeScanIssues(String filePath) {
-        if (Objects.nonNull(filePath) && !filePath.isEmpty() && fileToIssues.containsKey(filePath)) {
-            fileToIssues.remove(filePath);
-            syncWithCxOneFindings();
-        }
-    }
-
-    public synchronized Map<String, List<ScanIssue>> getAllIssues() {
-        return Collections.unmodifiableMap(fileToIssues);
-    }
-
-    public void removeAllScanIssuesOfType(String scannerType) {
-        for (Map.Entry<String, List<ScanIssue>> entry : getAllIssues().entrySet()) {
-            List<ScanIssue> problems = entry.getValue();
-            if (problems != null) {
-                problems.removeIf(problem -> scannerType.equals(problem.getScanEngine().name()));
-            }
-        }
         syncWithCxOneFindings();
     }
 
@@ -88,8 +65,74 @@ public final class ProblemHolderService {
      * @param filePath the file path.
      * @return the scan issues.
      */
-    public synchronized List<ScanIssue> getScanIssueByFile(String filePath) {
-        return fileToIssues.getOrDefault(filePath, Collections.emptyList());
+    public List<ScanIssue> getScanIssueByFile(String filePath) {
+        return Collections.unmodifiableList(fileToIssues.getOrDefault(filePath, List.of()));
+    }
+
+    /**
+     * Returns all scan issues.
+     */
+    public Map<String, List<ScanIssue>> getAllIssues() {
+        return Collections.unmodifiableMap(fileToIssues);
+    }
+
+    /**
+     * Removes scan issues for the given file.
+     *
+     * @param filePath virtual file path.
+     */
+    public void removeScanIssues(String filePath) {
+        if (Objects.nonNull(filePath) && !filePath.isEmpty() && fileToIssues.containsKey(filePath)) {
+            fileToIssues.remove(filePath);
+            syncWithCxOneFindings();
+        }
+    }
+
+    /**
+     * Removes all scan issues of a given scanner type.
+     */
+    public void removeAllScanIssuesOfType(String scannerType) {
+        fileToIssues.values().forEach(scanIssues -> {
+            if (Objects.nonNull(scanIssues) && !scanIssues.isEmpty()) {
+                scanIssues.removeIf(scanIssueObj -> scannerType.equals(scanIssueObj.getScanEngine().name()));
+            }
+        });
+        syncWithCxOneFindings();
+    }
+
+    /**
+     * Removes all scan issues of a given scanner type for a file.
+     *
+     * @param scannerType the scanner type. e.g., OSS, ASCA etc.
+     */
+    public void removeScanIssuesByFileAndScanner(String scannerType, String filePath) {
+        if (fileToIssues.isEmpty() || Objects.isNull(filePath) || filePath.isEmpty()
+                || Objects.isNull(scannerType) || scannerType.isEmpty() || !fileToIssues.containsKey(filePath)) {
+            return;
+        }
+        List<ScanIssue> scanIssuesList = fileToIssues.get(filePath);
+        if (Objects.isNull(scanIssuesList) || scanIssuesList.isEmpty()) {
+            return;
+        }
+        scanIssuesList.removeIf(scanIssue -> scannerType.equalsIgnoreCase(scanIssue.getScanEngine().name()));
+        syncWithCxOneFindings();
+    }
+
+    /**
+     * Merges new scan issues into the existing list for the given file path.
+     *
+     * @param filePath  the file path.
+     * @param newIssues the new issues to add.
+     */
+    public void mergeScanIssues(String filePath, List<ScanIssue> newIssues) {
+        fileToIssues.compute(filePath, (key, existingIssues) -> {
+            List<ScanIssue> updatedList = (Objects.isNull(existingIssues) || existingIssues.isEmpty())
+                    ? new ArrayList<>()
+                    : new ArrayList<>(existingIssues);
+            updatedList.addAll(newIssues);
+            return updatedList;
+        });
+        syncWithCxOneFindings();
     }
 
     /**
@@ -98,8 +141,8 @@ public final class ProblemHolderService {
      * @param filePath the file path.
      * @return the problem descriptors.
      */
-    public synchronized List<ProblemDescriptor> getProblemDescriptors(String filePath) {
-        return fileProblemDescriptor.getOrDefault(filePath, Collections.emptyList());
+    public List<ProblemDescriptor> getProblemDescriptors(String filePath) {
+        return Collections.unmodifiableList(fileProblemDescriptor.getOrDefault(filePath, List.of()));
     }
 
     /**
@@ -108,7 +151,7 @@ public final class ProblemHolderService {
      * @param filePath           the file path.
      * @param problemDescriptors the problem descriptors.
      */
-    public synchronized void addProblemDescriptors(String filePath, List<ProblemDescriptor> problemDescriptors) {
+    public void addProblemDescriptors(String filePath, List<ProblemDescriptor> problemDescriptors) {
         fileProblemDescriptor.put(filePath, new ArrayList<>(problemDescriptors));
     }
 
@@ -122,11 +165,43 @@ public final class ProblemHolderService {
     }
 
     /**
-     * Clears all problem descriptors.
+     * Removes all problem descriptors for the given file by scanner type.
+     *
+     * @param filePath   - virtual file path
+     * @param scanEngine - scan engine type
      */
-    public void removeAllProblemDescriptors() {
-        fileProblemDescriptor.clear();
+    public void removeProblemDescriptorsForFileByScanner(String filePath, ScanEngine scanEngine) {
+        if (fileProblemDescriptor.isEmpty() || Objects.isNull(scanEngine) || Objects.isNull(filePath) ||
+                filePath.isEmpty() || !fileProblemDescriptor.containsKey(filePath)) {
+            return;
+        }
+        List<ProblemDescriptor> problemDescriptors = fileProblemDescriptor.get(filePath);
+        if (Objects.isNull(problemDescriptors) || problemDescriptors.isEmpty()) {
+            return;
+        }
+        problemDescriptors.removeIf(descriptor -> {
+            CxOneAssistFix fix = (CxOneAssistFix) descriptor.getFixes()[0];
+            return fix != null && scanEngine.name().equalsIgnoreCase(fix.getScanIssue().getScanEngine().name());
+        });
     }
+
+    /**
+     * Merges new problem descriptors into the existing list for the given file path.
+     *
+     * @param filePath    the file path.
+     * @param newProblems the new problem descriptors to add.
+     */
+    public void mergeProblemDescriptors(String filePath, List<ProblemDescriptor> newProblems) {
+        fileProblemDescriptor.compute(filePath, (key, existingProblems) -> {
+            // Creating a new combined list to avoid modifying shared references
+            List<ProblemDescriptor> updatedList = (Objects.isNull(existingProblems) || existingProblems.isEmpty())
+                    ? new ArrayList<>()
+                    : new ArrayList<>(existingProblems);
+            updatedList.addAll(newProblems);
+            return updatedList;
+        });
+    }
+
 
     /**
      * Adds problems to the CxOne findings for the given file.
